Add magic to run on java 14